# paw-pos

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: paw-pos-mvp-backlog.md  paw-pos-mvp-spec.md
docs/specs/: README.md  story-1-1-bootstrap-scaffold.md  story-1-1-web-shell-navigation.md
src/paw_pos/: __init__.py  app.py  cli.py  db.py  models.py
src/paw_pos/exporters/: __init__.py  csv_export.py
src/paw_pos/services/: __init__.py  earnings.py  inventory.py  sales.py
tests/: test_sales_flow.py
