[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paw-pos"
version = "0.1.0"
description = "Offline-first Python POS scaffold for Paw POS"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Arden" }
]
license = { text = "Proprietary" }

[project.scripts]
paw-pos = "paw_pos.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
